@@ -1,3 +1,7 @@
+(2002/10/29 - broeker) Fix bug #588671: disprefs was still 0 if only 1 very
+	               long reference output shown by curses display.
+(2002/08/27 - broeker) Fix bug #600494: use mygetenv() for HOME, and provide
+	               a fall-back if it's not there.
 (2002/08/15 - broeker) DOS/Cygwin bugfix: avoid setmode() if fopen() failed.
 (2002/07/27 - broeker) Yet another round of Cygwin-related fixes.  Do the 
 		       #include <fcntl.h> early enough, so checks for 
